# melon

./: README.md
melon-crawler/: .gitignore  Makefile  pyproject.toml
melon-crawler/melon_crawler/: main.py  page.py
melon-iac/: Makefile  app.py  cdk.json  package-lock.json  package.json  pyproject.toml
melon-iac/lambda/crawler/: index.ts
melon-iac/lib/: melon-iac-stack.ts
melon-iac/melon_iac/: melon_iac_stack.py
melon-iac/test/: melon-iac.test.ts
melon-iac/tests/unit/: test_melon_iac_stack.py
melon-ml/: .gitignore  pyproject.toml
melon-ml/notebook/: eda.ipynb  preprocess.ipynb  train.ipynb
melon_util/: .env.sample  .gitignore  README.md  pyproject.toml
melon_util/melon_util/: audio.py  datasets.py  image.py  movie.py  scraper.py
