[tool.poetry]
name = "melon-iac"
version = "0.1.0"
description = ""
authors = ["adtak <adtak62@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aws-cdk-lib = "^2.143.0"
constructs = "^10.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
ruff = "^0.4.5"
black = "^24.4.2"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
exclude = ["^cdk.out/$"]

[tool.ruff]
target-version = "py311"
lint.select = ["ALL"]
lint.ignore = [
  "D",
  "TD",
  "FIX",
  "PLR0913",
]
lint.fixable = ["ALL"]
lint.unfixable = []
line-length = 88
